Renamed the namespaces from a .NET to a .Server

--- a/EndGate.Server/EndGate.Server.Core/EndGate.Server.Core.csproj
+++ b/EndGate.Server/EndGate.Server.Core/EndGate.Server.Core.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{97592EF1-7FE4-4EF6-9CCF-EBB5B5B1CE4B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EndGate.Core.Net</RootNamespace>
-    <AssemblyName>EndGate.Core.Net</AssemblyName>
+    <RootNamespace>EndGate.Server</RootNamespace>
+    <AssemblyName>EndGate.Server</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
