Added a Build configuration to create 3 nuget packages: EndGate.Server.Core, EndGate.Server.SignalR and EndGate.Multiplayer.
- Also modified the UserManager to support user factories.

--- a/EndGate.Server/EndGate.Server.Core/EndGate.Server.Core.csproj
+++ b/EndGate.Server/EndGate.Server.Core/EndGate.Server.Core.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{97592EF1-7FE4-4EF6-9CCF-EBB5B5B1CE4B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EndGate.Server</RootNamespace>
-    <AssemblyName>EndGate.Server</AssemblyName>
+    <RootNamespace>EndGate.Server.Core</RootNamespace>
+    <AssemblyName>EndGate.Server.Core</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,6 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\EndGate.Server.Core.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\EndGate.Server.Core.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -65,6 +67,7 @@
     <Compile Include="Loopers\TimedCallback.cs" />
   </ItemGroup>
   <ItemGroup />
+  <Import Project="..\build\EndGate.Server.Common.targets" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
