--- a/EndGate.Server/EndGate.Server.SignalR/EndGate.Server.SignalR.csproj
+++ b/EndGate.Server/EndGate.Server.SignalR/EndGate.Server.SignalR.csproj
@@ -22,6 +22,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Debug\EndGate.Server.SignalR.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\EndGate.Server.SignalR.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNet.SignalR.Core">
@@ -57,7 +59,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserManagement\DefaultUserFactory.cs" />
     <Compile Include="UserManagement\IUser.cs" />
+    <Compile Include="UserManagement\IUserFactory.cs" />
     <Compile Include="UserManagement\UserManager.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -69,6 +73,7 @@
       <Name>EndGate.Server.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="..\build\EndGate.Server.Common.targets" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
